<resources>
    <string name="app_name">UTutor</string>
    <string name="scadenza_lezione">scadenza_lezione</string>
    <string name="dashboard">Dashboard</string>
    <string name="crea_lezione">crea_lezione</string>
    <string name="risorse">risorse</string>
    <string name="nome_lezione">nome lezione</string>
    <string name="descrizione_lezione">descrizione lezione</string>
    <string name="state">state</string>
    <string name="modifica">Modifica</string>
    <string name="concluso">Concluso</string>
    <string name="name">Name</string>
    <string name="description">Name</string>
    <string name="inizia">Inizia</string>
    <string name="vedi_log_sessioni">VEDI LOG SESSIONI</string>
    <string name="elimina">Elimina</string>
    <string name="textview">TextView</string>
    <string name="data">data</string>
    <string name="oldPassword" />
    <string name="elimina_risorsa">Elimina risorsa</string>
    <string name="aggiungi_risorsa">Aggiungi risorsa</string>
    <string name="risorsa">Risorsa</string>
    <string name="filtri_di_ricerca_su_lezioni">Filtri di ricerca su lezioni</string>
    <string name="tutti">Tutti</string>
    <string name="liberi">Liberi</string>
    <string name="in_corso">In corso</string>
    <string name="conclusi">Conclusi</string>
    <string name="ricordami">Ricordami</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="university">University</string>
    <string name="password">Password</string>
    <string name="logoimage">logoImage</string>
    <string name="aggiungi_nuova_lezione">Aggiungi Nuova Lezione</string>
    <string name="gestisci_risorse">Gestisci Risorse</string>
    <string name="logout">Logout</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="add_resource" />
    <string name="temp">TextView</string>
    <string name="id_lezione">ID LEZIONE</string>
    <string name="lezione">NOME LEZIONE</string>
    <string name="logostate">logoState</string>
    <string name="resource_check">resource check</string>
</resources>