<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".views.Login">
    <data>
        <variable
            name="viewModel"
            type="com.example.ututor.viewmodels.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logoimage"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/university"
            android:inputType="textPersonName"
            android:paddingTop="16dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:paddingTop="16dp"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Switch
                android:id="@+id/saveData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="250dp"
                android:layout_marginEnd="0dp"
                android:gravity="center|end"
                android:text="@string/ricordami" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:text="@string/login" />

    </LinearLayout>

</layout>