<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".views.LessonView">
    <data>
        <variable
            name="viewModel"
            type="com.example.ututor.viewmodels.LessonViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/ProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:hint="@string/nome_lezione"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@{viewModel.currentLesson.name}"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:hint="Descrizione"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@{viewModel.currentLesson.descrizoine}"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:hint="@string/data"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:addStatesFromChildren="false"
                android:animateLayoutChanges="false"
                android:animationCache="true"
                android:contentDescription="@string/state"
                android:minHeight="48dp"
                android:scrollbarStyle="outsideOverlay"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/risorsaSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:addStatesFromChildren="false"
                android:animateLayoutChanges="false"
                android:animationCache="true"
                android:contentDescription="@string/name"
                android:minHeight="48dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/VisTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

        </LinearLayout>

        <Button
            android:id="@+id/log_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/vedi_log_sessioni"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/inizia"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/concluso"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/modify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/modifica"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/elimina"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:background="@color/blu_dark" />

    </LinearLayout>

</layout>