<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lezione"
                android:scaleX="1"
                android:scaleY="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColorHint="#78909C"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:hint="@string/id_lezione"
                android:textColorHint="#757575"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iconC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logostate"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:scaleType="centerInside"
            android:scaleX="4"
            android:scaleY="4"
            app:srcCompat="@drawable/bluestate" />

    </LinearLayout>

</LinearLayout>