<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.Dashboard">
    <data>
        <variable
            name="viewModel"
            type="com.example.ututor.viewmodels.DashboardViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filtri_di_ricerca_su_lezioni"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:checkable="true"
                android:checked="true"
                android:text="@string/tutti"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:checkable="true"
                android:text="@string/liberi"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/running"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:checkable="true"
                android:text="@string/in_corso"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/finished"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:checkable="true"
                android:text="@string/conclusi"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/idSwipeToRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ListView
                    android:id="@+id/JobList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    >

                </ListView>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="8"
                android:background="@color/blu_dark"
                android:minHeight="16dp"
               />

        </LinearLayout>

    </LinearLayout>


</layout>

